# far

./: .gitignore  .gitmodules  CMakeLists.txt  bootstrap.bat  readme.md
.github/workflows/: build.yml  release.yml
_build/vc/: all.sln  build-libgit2.cmd  gitbranch.sln
_build/vc/config/: common.props
ext/: CMakeLists.txt
plugins/common/unicode/: plugin.hpp
plugins/gitbranch/: GitBranch.cpp  GitBranch.vcxproj  GitBranch.vcxproj.filters  GitBranchW.vc.def  version.hpp
src/: CMakeLists.txt  GitBranch.cpp  GitBranch.vcxproj  GitBranch.vcxproj.filters  guid.hpp  version.hpp
